# logger

./: README.md  dict_loggers.py  pyproject.toml  requirements.txt  setup.py
django-logger/: dict_loggers.py  logger_filters.py  logger_formatter.py  logger_handlers.py  middleware.py
django_logger.egg-info/: PKG-INFO  SOURCES.txt
logger/: README.md  dict_loggers.py  logger_formatter.py  loggers.py  middleware.py  setup.py
logger.egg-info/: SOURCES.txt  requires.txt  top_level.txt
logger/logger.egg-info/: PKG-INFO
middlewares/: logger_middleware.py
